# XorCipher

./: CMakeLists.txt  README.md  main.c  test.c  xorcipher.h
